deployment/aks/services/ingress/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-gw-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  tls:
    - hosts: 
        - api.shopwinner.org # api domain that is poiting to API GW
        - identity.shopwinner.org # Identity Server domain
        - shopwinner.org # Root domain
      secretName: shopwinner-api-cert
  rules:
  - host: "api.shopwinner.org"
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web-gw-service
            port:
              number: 80

  - host: "shopwinner.org"
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: web-blazor-service
              port:
                number: 80

  - host: "identity.shopwinner.org"
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: identity-auth-api-service
              port:
                number: 80
